# LLMbenchmark

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
prompts/: coding.jsonl  general.jsonl  math.jsonl  reasoning.jsonl
results/: report.html
src/llm_benchmark/: __init__.py  cli.py  config.py
src/llm_benchmark/backends/: __init__.py  base.py  mlx.py  ollama.py
src/llm_benchmark/benchmarks/: __init__.py  base.py  latency.py  memory.py  quality.py  speed.py
src/llm_benchmark/metrics/: __init__.py  collector.py  types.py
src/llm_benchmark/report/: __init__.py  charts.py  dashboard_template.html  formatter.py
src/llm_benchmark/storage/: database.py
tests/: conftest.py
tests/integration/: conftest.py  test_ollama.py
tests/unit/: test_backends.py  test_benchmarks.py  test_cli.py  test_config.py  test_metrics_types.py  test_report.py  test_storage.py
