[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-benchmark"
version = "0.1.0"
description = "Local LLM benchmarking tool optimized for Apple Silicon (M-series)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "benchmark", "apple-silicon", "ollama", "mlx"]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.25",
    "psutil>=5.9",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
mlx = ["mlx-lm>=0.8"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "mypy>=1.5",
    "responses>=0.24",
]

[project.scripts]
llm-bench = "llm_benchmark.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_benchmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/llm_benchmark --cov-report=term-missing -v"
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a running Ollama instance",
    "slow: marks tests that take >5s",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
